wip: add ability to list files in a repo
